feat: Add bottle pipeline and production readiness improvements
Major Features:
- Add bottle label analysis pipeline with OpenAI Vision integration
- Add new endpoints: /map-bottle-pads, /analyze-bottle-label, /detect-color-swatches, /extract-colors-at-locations
- Add text extraction service with OpenAI and Tesseract fallback
- Add color swatch detection and reference square detection

Production Readiness:
- Add rate limiting with Flask-Limiter (endpoint-specific limits)
- Add request ID tracing for log correlation
- Sanitize error messages in production mode (prevent info disclosure)
- Add maximum image size validation (prevent memory exhaustion)
- Fix path traversal vulnerability in review routes
- Conditionally enable review routes (disabled in production by default)

Improvements:
- Fix OpenCV LAB to standard LAB color conversion
- Add rotation threshold to prevent unnecessary image degradation
- Expand pad count validation (3-7 pads, was 4-7)
- Make image quality validation non-blocking
- Update .gitignore to exclude large test images
- Add comprehensive documentation (deployment, production readiness reviews)

Dependencies:
- Add Flask-Limiter for rate limiting
- Add pytesseract for OCR fallback

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,12 @@ MAX_IMAGE_SIZE_MB=10
 
 # Request Timeout (seconds)
 REQUEST_TIMEOUT=30
+
+# CRITICAL - Required for bottle pipeline
+OPENAI_API_KEY=sk-your-key-here
+
+# Security - CORS configuration
+CORS_ORIGINS=https://your-laravel-app.com
+
+# Optional but recommended
+REDIS_URL=redis://localhost:6379/0  # For multi-instance rate limiting
